gnome-initial-setup (3.29.1-1) UNRELEASED; urgency=medium

  * New upstream release
  * d/p/welcome-screen.patch: Drop, this is already upstream
  * d/p/use-Debian-icon-on-Debian.patch: Drop, this is already upstream
  * d/p/use-Ubuntu-icon-on-Ubuntu.patch: Drop, this is already upstream
  * Standards-Version: 4.1.5 (no changes required)
  * Set Rules-Requires-Root to no

 -- Andrea Azzarone <andrea.azzarone@canonical>  Wed, 01 Aug 2018 13:52:58 +0200

gnome-initial-setup (3.28.0-2) unstable; urgency=medium

  * Add welcome-screen.patch from Fedora to still show Welcome screen if
    Language page is disabled
  * Install vendor.conf on Ubuntu to skip the language settings there
    since they don't currently work with Ubuntu's language packs
  * Cherry-pick use-Ubuntu-icon-on-Ubuntu.patch

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 20 Mar 2018 23:09:30 -0400

gnome-initial-setup (3.28.0-1) unstable; urgency=medium

  * New upstream release
  * Cherry-pick use-Debian-icon-on-Debian.patch:
    - Use the Debian logo instead of GNOME logo on the Welcome screen
  * Depend on desktop-base on Debian for that feature

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 20 Mar 2018 19:29:29 -0400

gnome-initial-setup (3.27.90-2) unstable; urgency=medium

  * Release to unstable

 -- Jeremy Bicha <jbicha@debian.org>  Sat, 10 Mar 2018 20:59:32 -0500

gnome-initial-setup (3.27.90-1) experimental; urgency=medium

  * New upstream development release
  * Update Vcs fields for migration to https://salsa.debian.org/

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 13 Feb 2018 13:55:27 -0500

gnome-initial-setup (3.26.0-2) unstable; urgency=medium

  * Lower dependency on gdm3 to Suggests.
  * Update Vcs fields for conversion to git
  * Add debian/gbp.conf
  * Bump Standards-Version to 4.1.2
  * Bump debhelper compat to 11
  * Disable the Software Sources page since there is no obvious easy way
    to change this setting later
