@@ -36,7 +36,8 @@ Build-Depends: debhelper (>= 11),
                libpwquality-dev,
                librest-dev,
                libsecret-1-dev,
-               libwebkit2gtk-4.0-dev
+               libwebkit2gtk-4.0-dev,
+               meson (>= 0.47.0)
 Rules-Requires-Root: no
 Standards-Version: 4.1.5
 Vcs-Browser: https://salsa.debian.org/gnome-team/gnome-initial-setup
