@@ -5,13 +5,13 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 export DEB_LDFLAGS_MAINT_APPEND = -Wl,-z,defs -Wl,--as-needed
 
 %:
-	dh $@ --with gnome
+	dh $@ --with gnome --buildsystem=meson
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
 		--libexecdir=/usr/lib/gnome-initial-setup \
-		--disable-software-sources \
-		--with-vendor-conf-file=/usr/lib/gnome-initial-setup/vendor.conf
+		-Ddisable-software-sources=true \
+		-Dwith-vendor-conf-file=/usr/lib/gnome-initial-setup/vendor.conf
 
 # Skip language chooser on Ubuntu since it doesn't work there
 override_dh_install:
