@@ -6,8 +6,9 @@ gnome-initial-setup (3.29.1-1) UNRELEASED; urgency=medium
   * d/p/use-Ubuntu-icon-on-Ubuntu.patch: Drop, this is already upstream
   * Standards-Version: 4.1.5 (no changes required)
   * Set Rules-Requires-Root to no
+  * Build with meson 
 
- -- Andrea Azzarone <andrea.azzarone@canonical>  Wed, 01 Aug 2018 13:52:58 +0200
+ -- Andrea Azzarone <andrea.azzarone@canonical.com>  Wed, 01 Aug 2018 16:09:43 +0200
 
 gnome-initial-setup (3.28.0-2) unstable; urgency=medium
 
